# Template-Python-UV-Project

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python-uv/: action.yml
.github/tag_and_release/: intent.yaml
.github/workflows/: ci.yaml  ci_includes_e2e_test.yaml  docker-ci.yml  dockerhub-readme-ci.yml  docs-automerge.yml  docs-build-check.yaml  documentation.yaml  release-staging.yml  release-validate.yml  release.yml  rw_build_and_test.yaml  rw_docker_operations.yaml  rw_docs_operations.yaml  rw_organize_test_cov_reports.yaml  rw_parse_project_config.yaml  rw_parse_release_intent.yaml  rw_python_package.yaml  rw_release_complete.yaml  rw_release_staging_complete.yaml  rw_release_validation_complete.yaml  rw_run_all_test_and_record.yaml  rw_uv_run_test_with_multi_py_versions.yaml
docs_with_docusarus/: docusaurus.config.ts  package.json  pnpm-lock.yaml
docs_with_docusarus/contents/blog/: authors.yml
docs_with_docusarus/contents/development/: architecture.mdx  ci-cd.mdx  coding-style.mdx  index.mdx  requirements.mdx  sidebars.ts  workflow.mdx
docs_with_docusarus/contents/development/architecture/: index.mdx
docs_with_docusarus/contents/development/ci-cd/: additional-ci-workflows.mdx  continuous-integration.mdx  index.mdx  release-system.mdx  reusable-workflows.mdx  type-checking-workflow.mdx
docs_with_docusarus/contents/document/: introduction.mdx
docs_with_docusarus/contents/document/contribute/: discuss.mdx  report-bug.mdx  request-changes.mdx
scripts/: pyproject.toml
scripts/ci/: release_intent.py
(+4 files in other folders)
