[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci-python-scripts"
version = "0.0.1"
description = "ðŸ Just a template of Python project be managed by UV."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "jsonschema>=4.17.0,<5",
]

[project.scripts]
release-intent = "ci.release_intent:main"

[tool.hatch.build.targets.sdist]
include = ["ci/"]

[tool.hatch.build.targets.wheel]
include = ["ci/"]
